@@ -5,6 +5,7 @@ AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
 m4_include([libev.m4])
 AM_CONFIG_HEADER(src/config.h)
 AM_MAINTAINER_MODE
+AM_ICONV
 
 AC_ISC_POSIX
 AC_PROG_CC
